@@ -122,9 +122,6 @@ class ImageStorage(Device, NeedsDatapath):
                                 type=int, settable=True),
     }
 
-    def doReadDatapath(self):
-        return session.experiment.datapath
-
     def doUpdateDatapath(self, value):
         # always use only first data path
         self._datapath = path.join(value[0], self.subdir)
