@@ -275,13 +275,13 @@ def CreateAllDevices():
         session.endMultiCreate()
 
 @usercommand
-def NewExperiment(proposal, title='', **parameters):
+def NewExperiment(proposal, title='', localcontact='', **parameters):
     """Start a new experiment with the given proposal number and title.
 
-    You can also give a "localcontact" argument.  Users can be added with
-    `AddUser`.  Example:
+    You can also give a argument for the local contact.  Users can be added
+    with `AddUser`.  Example:
 
-    >>> NewExperiment(5401, 'Dynamics of H2O', localcontact='L. Ocal')
+    >>> NewExperiment(5401, 'Dynamics of H2O', 'L. Ocal Contact')
     >>> AddUser('F. User', 'friendlyuser@frm2.tum.de')
 
     When configured, proposal information will be automatically filled in from
